# pytest-fastapi-crud-example

./: .gitignore  pyproject.toml  requests.http
app/: auth.py  main.py  models.py  schemas.py  user.py
frontend/: index.html  index.html.bak
tests/: conftest.py  test_crud_api.py
